# ImplementWebRequestInC

./: .gitignore  README.md
ImplementWebRequestInC-Curl/: CMakeLists.txt
ImplementWebRequestInC-Curl/src/: main.c
ImplementWebRequestInC-Tcp-Ip/: CMakeLists.txt
ImplementWebRequestInC-Tcp-Ip/src/: main.c
ImplementWebRequestInC-WinINet/: CMakeLists.txt
ImplementWebRequestInC-WinINet/src/: main.c
